# OpenGLGame

./: '  .clang-format  .clangd  .gitignore  CMakeLists.txt  OpenGLGame.10x  ]  build.bat  build.sh  build_output.txt  compile_commands.json  run.bat
.helix/: languages.toml
data/scenes/: default.scene  help.txt  temp.tempscene  test.scene
resources/: NewEntity.prefab  NewMaterial.mat  Player.prefab  Root.prefab  Root1.prefab  Root2.prefab  TrashcanBase.prefab  TrashcanBase1.prefab  TrashcanBase2.prefab  gangster.prefab  tester.mat  thefinaltest.mat  walls.mat  wrenchMaterial.mat
src/: animation.cpp  animation.h  camera.cpp  camera.h  component.cpp  component.h  debug.cpp  debug.h  ecs.cpp  ecs.h  editor.cpp  editor.h  entity.cpp  entity.h  forward.h  imgui.ini  input.cpp  input.h  inspector.cpp  inspector.h  loader.cpp  loader.h  main.cpp  meshrenderer.cpp  meshrenderer.h  physics.cpp  physics.h  player.cpp  player.h  prefab.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  sceneloader.cpp  sceneloader.h  shader.cpp  shader.h  transform.cpp  transform.h
src/shaders/: SSAOblurshader.fs  SSAOshader.fs  SSAOshader.vs  debugShader.fs  debugShader.vs  deferredlightingshader.fs  deferredlightingshader.vs  depthprepassshader.fs  depthprepassshader.vs  fullscreenshader.fs  fullscreenshader.vs  gaussianblurshader.fs  gaussianblurshader.vs  gbuffershader.fs  gbuffershader.vs  litshader.fs  litshader.vs  pbrlitshader.fs  pbrlitshader.vs  pickingshader.fs  pickingshader.vs  postprocessshader.fs  shadowmapblurshader.fs
src/utils/: imconfig.h  imgui.h  imgui_demo.cpp  (+2 more)
(+9 files in other folders)
